# squrl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPERATIONS.md  README.md  SECURITY.md  curl-install.sh  deny.toml  flake.nix  justfile  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
requests/: example.http  squrl-env.json
requests/demo/: example.http
scripts/: curl-install.ps1  curl-install.sh  install.ps1  install.sh
src/: errors.rs  lib.rs  main.rs
src/app/: app.rs  collection.rs  constants.rs  environment.rs  key_value.rs  log.rs  mod.rs  utils.rs
src/app/files/: collection.rs  config.rs  env_watcher.rs  environment.rs  key_bindings.rs  mod.rs  theme.rs  theme_presets.rs  utils.rs
src/app/files/themes/: catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  default.toml  dracula.toml  gruvbox.toml  opencode.toml  vscode_dark.toml
src/app/request/: auth.rs  export.rs  headers.rs  key_value_crud.rs  mod.rs  query_params.rs  scripts.rs  send.rs  url.rs  utils.rs
src/app/request/grpc/: send.rs
src/app/request/http/: body.rs  method.rs  mod.rs  send.rs
src/app/request/ws/: send.rs
src/app/startup/: mod.rs  prepare_terminal.rs  startup.rs
src/cli/: args.rs  handle_commands.rs  mod.rs  try_request.rs
src/cli/commands/: completions.rs  env.rs  import.rs  key.rs  key_value.rs  man.rs  mod.rs  theme.rs  try_command.rs
src/cli/commands/collection_commands/: collection_commands.rs  mod.rs
src/cli/commands/request/: commands.rs
src/cli/commands/request_commands/: auth.rs  body.rs  method.rs  mod.rs  new.rs  request_commands.rs  scripts.rs  send.rs  settings.rs  url.rs
src/cli/environment/: describe.rs
src/cli/handlers/: collection.rs  completions.rs  env.rs  import.rs  man.rs  mod.rs  request.rs  theme.rs
src/cli/import/: curl.rs  http_file.rs  mod.rs  openapi.rs  postman_collection.rs  postman_env.rs
src/cli/request/: auth.rs  describe.rs  export.rs  headers.rs  mod.rs  new.rs  query_params.rs  scripts.rs  send.rs  settings.rs  try_request.rs  url.rs
src/cli/request/http/: body.rs  method.rs  mod.rs
src/cli/utils/: arguments_validators.rs  collection.rs  mod.rs
src/models/: collection.rs  environment.rs  export.rs  folder.rs  mod.rs  request.rs  response.rs  scripts.rs  settings.rs
src/models/auth/: auth.rs  basic.rs  bearer_token.rs  digest.rs  jwt.rs  mod.rs
src/models/protocol/: mod.rs  protocol.rs
src/tui/: app_states.rs  event_key_bindings.rs  events.rs  macros.rs  mod.rs
src/tui/app_states/: app_state.rs  available_events.rs  display.rs  mod.rs  transitions.rs
src/tui/events/: app_event.rs  handler.rs  mod.rs
src/tui/logic/: change_app_state.rs  collection.rs  environment.rs  inputs.rs  mod.rs  param_tabs.rs  result_tabs.rs  utils.rs
src/tui/ui/: collection.rs  environments.rs  homepage.rs  mod.rs  result_tabs.rs  ui.rs  views.rs
src/tui/utils/: centered_rect.rs  mod.rs  syntax_highlighting.rs
tests/: cli_basic_test.rs  collection_env_test.rs  collection_test.rs  completions_and_man_test.rs  completions_command_test.rs  content_type_test.rs  digest_test.rs  environment_test.rs  import_test.rs  request_test.rs  response_test.rs  send_http_request_test.rs  settings_test.rs  theme_test.rs  try_command_test.rs
tests/helpers/: mod.rs
(+91 files in other folders)
