[package]
name = "squrl"
version = "0.1.0"
authors = ["FloodCreux"]
edition = "2024"
license = "MIT"
readme = "README.md"


exclude = [
	".github"
]

[dependencies]
anyhow = "1.0.101"
image = "0.25.9"
jsonxf = "1.1.1"
parking_lot = "0.12.5"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["cookies"] }
reqwest-middleware = "0.5.1"
reqwest-tracing = "0.7.0"
serde = { version="1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
mockito = "1.7.2"
