[package]
name = "squrl"
version = "0.1.0"
authors = ["FloodCreux"]
edition = "2024"
license = "MIT"
readme = "README.md"


exclude = [
	".github"
]

[dependencies]
anyhow = "1.0.101"
clap = { version="4.5.57", features=["derive", "color", "suggestions"] }
clap_mangen = "0.2.31"
directories = "6.0.0"
image = "0.25.9"
indexmap = { version="2.13.0", features=["serde", "rayon"] }
jsonxf = "1.1.1"
lazy_static = "1.5.0"
parking_lot = "0.12.5"
ratatui = "0.30.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["cookies"] }
reqwest-middleware = "0.5.1"
reqwest-tracing = "0.7.0"
serde = { version="1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
mockito = "1.7.2"
serde_json = "1.0.149"
